bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:5: error: ')' expected but 'return' found.
      return false
      ^